// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slideshow tests should render the UI snapshot correctly 1`] = `
<div
  className="css-1kbeyk8"
>
  <div
    className="css-1ngwrio"
  >
    <div
      className="css-hze00u"
    >
      <div
        className="css-1ncw6ex"
      >
        <h2
          className="chakra-heading css-m35uou"
          id="component-wrapper-heading-slideshow-test-id"
        >
          <a
            className="css-0"
            href="https://nypl.com"
            id="component-wrapper-heading-link-slideshow-test-id"
            onClick={[Function]}
          >
            Test
          </a>
        </h2>
      </div>
    </div>
    <div
      className="css-1y2jlch"
    >
      <div
        className="css-14ix2g8"
      >
        <div
          className="css-0"
          id="slideshow-prev-button-container"
        >
          <button
            className="chakra-button css-kk119v"
            id="slideshow-prev-button"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            &lt;
          </button>
        </div>
        <div
          className="css-1ric1bm"
        >
          <ul
            className="css-1lmqp65"
          >
            <li
              className="css-1fzgmij"
              onFocus={[Function]}
            >
              <div
                className="css-pgu20y"
                id="slideshow-card-test-id-1"
              >
                <div
                  className="textBox css-0"
                >
                  <h3
                    aria-describedby="slideshow-card-author-test-id-1 slideshow-card-genre-test-id-1 slideshow-card-audience-test-id-1"
                    className="chakra-heading css-0"
                  >
                    <a
                      className="css-0"
                      href="https://www.nypl.org/"
                      id="slideshow-card-heading-link-test-id-1"
                      onClick={[Function]}
                    >
                      Test 1
                    </a>
                  </h3>
                  <div
                    className="details css-0"
                  >
                    <p
                      className="chakra-text css-0"
                      id="slideshow-card-author-test-id-1"
                    >
                      writer 1
                    </p>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-audience-test-id-1"
                    >
                      people
                    </span>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-genre-test-id-1"
                    >
                      genre
                    </span>
                  </div>
                </div>
                <div
                  className="css-ys3583"
                >
                  <a
                    aria-label="Test 1-image"
                    className="css-0"
                    href="https://www.nypl.org/"
                    id="slideshow-card-image-link-test-id-1"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="scout-nextjs-image"
                      id="nextjsImage-slideshow-test-id-1"
                    >
                      <span
                        style={
                          Object {
                            "background": "none",
                            "border": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": "initial",
                            "margin": 0,
                            "opacity": 1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "relative",
                            "width": "initial",
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "background": "none",
                              "border": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": "initial",
                              "margin": 0,
                              "opacity": 1,
                              "padding": 0,
                              "paddingTop": "50%",
                              "width": "initial",
                            }
                          }
                        />
                        <img
                          alt="image-1-alt-text"
                          data-nimg="responsive"
                          decoding="async"
                          onError={[Function]}
                          onLoad={[Function]}
                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                          style={
                            Object {
                              "border": "none",
                              "bottom": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": 0,
                              "left": 0,
                              "margin": "auto",
                              "maxHeight": "100%",
                              "maxWidth": "100%",
                              "minHeight": "100%",
                              "minWidth": "100%",
                              "objectFit": undefined,
                              "objectPosition": undefined,
                              "padding": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": 0,
                            }
                          }
                        />
                        <noscript>
                          <img
                            alt="image-1-alt-text"
                            data-nimg="responsive"
                            decoding="async"
                            loading="lazy"
                            sizes="100vw"
                            src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                            srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                            style={
                              Object {
                                "border": "none",
                                "bottom": 0,
                                "boxSizing": "border-box",
                                "display": "block",
                                "height": 0,
                                "left": 0,
                                "margin": "auto",
                                "maxHeight": "100%",
                                "maxWidth": "100%",
                                "minHeight": "100%",
                                "minWidth": "100%",
                                "objectFit": undefined,
                                "objectPosition": undefined,
                                "padding": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              }
                            }
                          />
                        </noscript>
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </li>
            <li
              className="css-1fzgmij"
              onFocus={[Function]}
            >
              <div
                className="css-pgu20y"
                id="slideshow-card-test-id-2"
              >
                <div
                  className="textBox css-0"
                >
                  <h3
                    aria-describedby="slideshow-card-author-test-id-2 slideshow-card-genre-test-id-2 slideshow-card-audience-test-id-2"
                    className="chakra-heading css-0"
                  >
                    <a
                      className="css-0"
                      href="https://www.nypl.org/"
                      id="slideshow-card-heading-link-test-id-2"
                      onClick={[Function]}
                    >
                      Test 2
                    </a>
                  </h3>
                  <div
                    className="details css-0"
                  >
                    <p
                      className="chakra-text css-0"
                      id="slideshow-card-author-test-id-2"
                    >
                      writer 2
                    </p>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-audience-test-id-2"
                    >
                      people
                    </span>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-genre-test-id-2"
                    >
                      genre
                    </span>
                  </div>
                </div>
                <div
                  className="css-ys3583"
                >
                  <a
                    aria-label="Test 2-image"
                    className="css-0"
                    href="https://www.nypl.org/"
                    id="slideshow-card-image-link-test-id-2"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="scout-nextjs-image"
                      id="nextjsImage-slideshow-test-id-2"
                    >
                      <span
                        style={
                          Object {
                            "background": "none",
                            "border": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": "initial",
                            "margin": 0,
                            "opacity": 1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "relative",
                            "width": "initial",
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "background": "none",
                              "border": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": "initial",
                              "margin": 0,
                              "opacity": 1,
                              "padding": 0,
                              "paddingTop": "50%",
                              "width": "initial",
                            }
                          }
                        />
                        <img
                          alt="image-2-alt-text"
                          data-nimg="responsive"
                          decoding="async"
                          onError={[Function]}
                          onLoad={[Function]}
                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                          style={
                            Object {
                              "border": "none",
                              "bottom": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": 0,
                              "left": 0,
                              "margin": "auto",
                              "maxHeight": "100%",
                              "maxWidth": "100%",
                              "minHeight": "100%",
                              "minWidth": "100%",
                              "objectFit": undefined,
                              "objectPosition": undefined,
                              "padding": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": 0,
                            }
                          }
                        />
                        <noscript>
                          <img
                            alt="image-2-alt-text"
                            data-nimg="responsive"
                            decoding="async"
                            loading="lazy"
                            sizes="100vw"
                            src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                            srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                            style={
                              Object {
                                "border": "none",
                                "bottom": 0,
                                "boxSizing": "border-box",
                                "display": "block",
                                "height": 0,
                                "left": 0,
                                "margin": "auto",
                                "maxHeight": "100%",
                                "maxWidth": "100%",
                                "minHeight": "100%",
                                "minWidth": "100%",
                                "objectFit": undefined,
                                "objectPosition": undefined,
                                "padding": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              }
                            }
                          />
                        </noscript>
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </li>
            <li
              className="css-1fzgmij"
              onFocus={[Function]}
            >
              <div
                className="css-pgu20y"
                id="slideshow-card-test-id-3"
              >
                <div
                  className="textBox css-0"
                >
                  <h3
                    aria-describedby="slideshow-card-author-test-id-3 slideshow-card-genre-test-id-3 slideshow-card-audience-test-id-3"
                    className="chakra-heading css-0"
                  >
                    <a
                      className="css-0"
                      href="https://www.nypl.org/"
                      id="slideshow-card-heading-link-test-id-3"
                      onClick={[Function]}
                    >
                      Test 3
                    </a>
                  </h3>
                  <div
                    className="details css-0"
                  >
                    <p
                      className="chakra-text css-0"
                      id="slideshow-card-author-test-id-3"
                    >
                      writer 3
                    </p>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-audience-test-id-3"
                    >
                      people
                    </span>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-genre-test-id-3"
                    >
                      genre
                    </span>
                  </div>
                </div>
                <div
                  className="css-ys3583"
                >
                  <a
                    aria-label="Test 3-image"
                    className="css-0"
                    href="https://www.nypl.org/"
                    id="slideshow-card-image-link-test-id-3"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="scout-nextjs-image"
                      id="nextjsImage-slideshow-test-id-3"
                    >
                      <span
                        style={
                          Object {
                            "background": "none",
                            "border": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": "initial",
                            "margin": 0,
                            "opacity": 1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "relative",
                            "width": "initial",
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "background": "none",
                              "border": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": "initial",
                              "margin": 0,
                              "opacity": 1,
                              "padding": 0,
                              "paddingTop": "50%",
                              "width": "initial",
                            }
                          }
                        />
                        <img
                          alt="image-3-alt-text"
                          data-nimg="responsive"
                          decoding="async"
                          onError={[Function]}
                          onLoad={[Function]}
                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                          style={
                            Object {
                              "border": "none",
                              "bottom": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": 0,
                              "left": 0,
                              "margin": "auto",
                              "maxHeight": "100%",
                              "maxWidth": "100%",
                              "minHeight": "100%",
                              "minWidth": "100%",
                              "objectFit": undefined,
                              "objectPosition": undefined,
                              "padding": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": 0,
                            }
                          }
                        />
                        <noscript>
                          <img
                            alt="image-3-alt-text"
                            data-nimg="responsive"
                            decoding="async"
                            loading="lazy"
                            sizes="100vw"
                            src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                            srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                            style={
                              Object {
                                "border": "none",
                                "bottom": 0,
                                "boxSizing": "border-box",
                                "display": "block",
                                "height": 0,
                                "left": 0,
                                "margin": "auto",
                                "maxHeight": "100%",
                                "maxWidth": "100%",
                                "minHeight": "100%",
                                "minWidth": "100%",
                                "objectFit": undefined,
                                "objectPosition": undefined,
                                "padding": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              }
                            }
                          />
                        </noscript>
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </li>
            <li
              className="css-1fzgmij"
              onFocus={[Function]}
            >
              <div
                className="css-pgu20y"
                id="slideshow-card-test-id-4"
              >
                <div
                  className="textBox css-0"
                >
                  <h3
                    aria-describedby="slideshow-card-author-test-id-4 slideshow-card-genre-test-id-4 slideshow-card-audience-test-id-4"
                    className="chakra-heading css-0"
                  >
                    <a
                      className="css-0"
                      href="https://www.nypl.org/"
                      id="slideshow-card-heading-link-test-id-4"
                      onClick={[Function]}
                    >
                      Test 4
                    </a>
                  </h3>
                  <div
                    className="details css-0"
                  >
                    <p
                      className="chakra-text css-0"
                      id="slideshow-card-author-test-id-4"
                    >
                      writer 4
                    </p>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-audience-test-id-4"
                    >
                      people
                    </span>
                    <span
                      className="chakra-text css-0"
                      id="slideshow-card-genre-test-id-4"
                    >
                      genre
                    </span>
                  </div>
                </div>
                <div
                  className="css-ys3583"
                >
                  <a
                    aria-label="Test 4-image"
                    className="css-0"
                    href="https://www.nypl.org/"
                    id="slideshow-card-image-link-test-id-4"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="scout-nextjs-image"
                      id="nextjsImage-slideshow-test-id-4"
                    >
                      <span
                        style={
                          Object {
                            "background": "none",
                            "border": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": "initial",
                            "margin": 0,
                            "opacity": 1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "relative",
                            "width": "initial",
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "background": "none",
                              "border": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": "initial",
                              "margin": 0,
                              "opacity": 1,
                              "padding": 0,
                              "paddingTop": "50%",
                              "width": "initial",
                            }
                          }
                        />
                        <img
                          alt="image-4-alt-text"
                          data-nimg="responsive"
                          decoding="async"
                          onError={[Function]}
                          onLoad={[Function]}
                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                          style={
                            Object {
                              "border": "none",
                              "bottom": 0,
                              "boxSizing": "border-box",
                              "display": "block",
                              "height": 0,
                              "left": 0,
                              "margin": "auto",
                              "maxHeight": "100%",
                              "maxWidth": "100%",
                              "minHeight": "100%",
                              "minWidth": "100%",
                              "objectFit": undefined,
                              "objectPosition": undefined,
                              "padding": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "width": 0,
                            }
                          }
                        />
                        <noscript>
                          <img
                            alt="image-4-alt-text"
                            data-nimg="responsive"
                            decoding="async"
                            loading="lazy"
                            sizes="100vw"
                            src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                            srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                            style={
                              Object {
                                "border": "none",
                                "bottom": 0,
                                "boxSizing": "border-box",
                                "display": "block",
                                "height": 0,
                                "left": 0,
                                "margin": "auto",
                                "maxHeight": "100%",
                                "maxWidth": "100%",
                                "minHeight": "100%",
                                "minWidth": "100%",
                                "objectFit": undefined,
                                "objectPosition": undefined,
                                "padding": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              }
                            }
                          />
                        </noscript>
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          className="css-0"
          id="slideshow-next-button-container"
        >
          <button
            className="chakra-button css-r8n6x3"
            id="slideshow-next-button"
            onClick={[Function]}
            tabIndex={-1}
            type="button"
          >
            &gt;
          </button>
        </div>
      </div>
    </div>
    <div
      className="css-1ktje31"
    >
      <div
        className="css-i2lecr"
      />
    </div>
  </div>
</div>
`;

exports[`SlideshowButton tests should render the UI snapshot correctly 1`] = `
<div
  className="css-0"
  id="slideshow-next-button-container"
>
  <button
    className="chakra-button css-5c2176"
    id="slideshow-next-button"
    onClick={[MockFunction]}
    tabIndex={-1}
    type="button"
  >
    &gt;
  </button>
</div>
`;

exports[`SlideshowButton tests should render the UI snapshot correctly 2`] = `
<div
  className="css-0"
  id="slideshow-prev-button-container"
>
  <button
    className="chakra-button css-5c2176"
    id="slideshow-prev-button"
    onClick={[MockFunction]}
    tabIndex={-1}
    type="button"
  >
    &lt;
  </button>
</div>
`;

exports[`SlideshowContainer tests should render the UI snapshot correctly 1`] = `
<div
  className="css-1ric1bm"
>
  <ul
    className="css-1lmqp65"
  >
    <li
      className="css-1fzgmij"
      onFocus={[Function]}
    >
      <div
        className="css-pgu20y"
        id="slideshow-card-test-id-1"
      >
        <div
          className="textBox css-0"
        >
          <h3
            aria-describedby="slideshow-card-author-test-id-1 slideshow-card-genre-test-id-1 slideshow-card-audience-test-id-1"
            className="chakra-heading css-0"
          >
            <a
              className="css-0"
              href="https://www.nypl.org/"
              id="slideshow-card-heading-link-test-id-1"
              onClick={[Function]}
            >
              Test 1
            </a>
          </h3>
          <div
            className="details css-0"
          >
            <p
              className="chakra-text css-0"
              id="slideshow-card-author-test-id-1"
            >
              writer 1
            </p>
            <span
              className="chakra-text css-0"
              id="slideshow-card-audience-test-id-1"
            >
              people
            </span>
            <span
              className="chakra-text css-0"
              id="slideshow-card-genre-test-id-1"
            >
              genre
            </span>
          </div>
        </div>
        <div
          className="css-ys3583"
        >
          <a
            aria-label="Test 1-image"
            className="css-0"
            href="https://www.nypl.org/"
            id="slideshow-card-image-link-test-id-1"
            onClick={[Function]}
            tabIndex={-1}
          >
            <div
              className="scout-nextjs-image"
              id="nextjsImage-slideshow-test-id-1"
            >
              <span
                style={
                  Object {
                    "background": "none",
                    "border": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": "initial",
                    "margin": 0,
                    "opacity": 1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "width": "initial",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "background": "none",
                      "border": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": "initial",
                      "margin": 0,
                      "opacity": 1,
                      "padding": 0,
                      "paddingTop": "50%",
                      "width": "initial",
                    }
                  }
                />
                <img
                  alt="image-1-alt-text"
                  data-nimg="responsive"
                  decoding="async"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
                <noscript>
                  <img
                    alt="image-1-alt-text"
                    data-nimg="responsive"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                    srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                    style={
                      Object {
                        "border": "none",
                        "bottom": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": 0,
                        "left": 0,
                        "margin": "auto",
                        "maxHeight": "100%",
                        "maxWidth": "100%",
                        "minHeight": "100%",
                        "minWidth": "100%",
                        "objectFit": undefined,
                        "objectPosition": undefined,
                        "padding": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </noscript>
              </span>
            </div>
          </a>
        </div>
      </div>
    </li>
    <li
      className="css-1fzgmij"
      onFocus={[Function]}
    >
      <div
        className="css-pgu20y"
        id="slideshow-card-test-id-2"
      >
        <div
          className="textBox css-0"
        >
          <h3
            aria-describedby="slideshow-card-author-test-id-2 slideshow-card-genre-test-id-2 slideshow-card-audience-test-id-2"
            className="chakra-heading css-0"
          >
            <a
              className="css-0"
              href="https://www.nypl.org/"
              id="slideshow-card-heading-link-test-id-2"
              onClick={[Function]}
            >
              Test 2
            </a>
          </h3>
          <div
            className="details css-0"
          >
            <p
              className="chakra-text css-0"
              id="slideshow-card-author-test-id-2"
            >
              writer 2
            </p>
            <span
              className="chakra-text css-0"
              id="slideshow-card-audience-test-id-2"
            >
              people
            </span>
            <span
              className="chakra-text css-0"
              id="slideshow-card-genre-test-id-2"
            >
              genre
            </span>
          </div>
        </div>
        <div
          className="css-ys3583"
        >
          <a
            aria-label="Test 2-image"
            className="css-0"
            href="https://www.nypl.org/"
            id="slideshow-card-image-link-test-id-2"
            onClick={[Function]}
            tabIndex={-1}
          >
            <div
              className="scout-nextjs-image"
              id="nextjsImage-slideshow-test-id-2"
            >
              <span
                style={
                  Object {
                    "background": "none",
                    "border": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": "initial",
                    "margin": 0,
                    "opacity": 1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "width": "initial",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "background": "none",
                      "border": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": "initial",
                      "margin": 0,
                      "opacity": 1,
                      "padding": 0,
                      "paddingTop": "50%",
                      "width": "initial",
                    }
                  }
                />
                <img
                  alt="image-2-alt-text"
                  data-nimg="responsive"
                  decoding="async"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
                <noscript>
                  <img
                    alt="image-2-alt-text"
                    data-nimg="responsive"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                    srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                    style={
                      Object {
                        "border": "none",
                        "bottom": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": 0,
                        "left": 0,
                        "margin": "auto",
                        "maxHeight": "100%",
                        "maxWidth": "100%",
                        "minHeight": "100%",
                        "minWidth": "100%",
                        "objectFit": undefined,
                        "objectPosition": undefined,
                        "padding": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </noscript>
              </span>
            </div>
          </a>
        </div>
      </div>
    </li>
    <li
      className="css-1fzgmij"
      onFocus={[Function]}
    >
      <div
        className="css-pgu20y"
        id="slideshow-card-test-id-3"
      >
        <div
          className="textBox css-0"
        >
          <h3
            aria-describedby="slideshow-card-author-test-id-3 slideshow-card-genre-test-id-3 slideshow-card-audience-test-id-3"
            className="chakra-heading css-0"
          >
            <a
              className="css-0"
              href="https://www.nypl.org/"
              id="slideshow-card-heading-link-test-id-3"
              onClick={[Function]}
            >
              Test 3
            </a>
          </h3>
          <div
            className="details css-0"
          >
            <p
              className="chakra-text css-0"
              id="slideshow-card-author-test-id-3"
            >
              writer 3
            </p>
            <span
              className="chakra-text css-0"
              id="slideshow-card-audience-test-id-3"
            >
              people
            </span>
            <span
              className="chakra-text css-0"
              id="slideshow-card-genre-test-id-3"
            >
              genre
            </span>
          </div>
        </div>
        <div
          className="css-ys3583"
        >
          <a
            aria-label="Test 3-image"
            className="css-0"
            href="https://www.nypl.org/"
            id="slideshow-card-image-link-test-id-3"
            onClick={[Function]}
            tabIndex={-1}
          >
            <div
              className="scout-nextjs-image"
              id="nextjsImage-slideshow-test-id-3"
            >
              <span
                style={
                  Object {
                    "background": "none",
                    "border": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": "initial",
                    "margin": 0,
                    "opacity": 1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "width": "initial",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "background": "none",
                      "border": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": "initial",
                      "margin": 0,
                      "opacity": 1,
                      "padding": 0,
                      "paddingTop": "50%",
                      "width": "initial",
                    }
                  }
                />
                <img
                  alt="image-3-alt-text"
                  data-nimg="responsive"
                  decoding="async"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
                <noscript>
                  <img
                    alt="image-3-alt-text"
                    data-nimg="responsive"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                    srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                    style={
                      Object {
                        "border": "none",
                        "bottom": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": 0,
                        "left": 0,
                        "margin": "auto",
                        "maxHeight": "100%",
                        "maxWidth": "100%",
                        "minHeight": "100%",
                        "minWidth": "100%",
                        "objectFit": undefined,
                        "objectPosition": undefined,
                        "padding": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </noscript>
              </span>
            </div>
          </a>
        </div>
      </div>
    </li>
    <li
      className="css-1fzgmij"
      onFocus={[Function]}
    >
      <div
        className="css-pgu20y"
        id="slideshow-card-test-id-4"
      >
        <div
          className="textBox css-0"
        >
          <h3
            aria-describedby="slideshow-card-author-test-id-4 slideshow-card-genre-test-id-4 slideshow-card-audience-test-id-4"
            className="chakra-heading css-0"
          >
            <a
              className="css-0"
              href="https://www.nypl.org/"
              id="slideshow-card-heading-link-test-id-4"
              onClick={[Function]}
            >
              Test 4
            </a>
          </h3>
          <div
            className="details css-0"
          >
            <p
              className="chakra-text css-0"
              id="slideshow-card-author-test-id-4"
            >
              writer 4
            </p>
            <span
              className="chakra-text css-0"
              id="slideshow-card-audience-test-id-4"
            >
              people
            </span>
            <span
              className="chakra-text css-0"
              id="slideshow-card-genre-test-id-4"
            >
              genre
            </span>
          </div>
        </div>
        <div
          className="css-ys3583"
        >
          <a
            aria-label="Test 4-image"
            className="css-0"
            href="https://www.nypl.org/"
            id="slideshow-card-image-link-test-id-4"
            onClick={[Function]}
            tabIndex={-1}
          >
            <div
              className="scout-nextjs-image"
              id="nextjsImage-slideshow-test-id-4"
            >
              <span
                style={
                  Object {
                    "background": "none",
                    "border": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": "initial",
                    "margin": 0,
                    "opacity": 1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "width": "initial",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "background": "none",
                      "border": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": "initial",
                      "margin": 0,
                      "opacity": 1,
                      "padding": 0,
                      "paddingTop": "50%",
                      "width": "initial",
                    }
                  }
                />
                <img
                  alt="image-4-alt-text"
                  data-nimg="responsive"
                  decoding="async"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
                <noscript>
                  <img
                    alt="image-4-alt-text"
                    data-nimg="responsive"
                    decoding="async"
                    loading="lazy"
                    sizes="100vw"
                    src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                    srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                    style={
                      Object {
                        "border": "none",
                        "bottom": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": 0,
                        "left": 0,
                        "margin": "auto",
                        "maxHeight": "100%",
                        "maxWidth": "100%",
                        "minHeight": "100%",
                        "minWidth": "100%",
                        "objectFit": undefined,
                        "objectPosition": undefined,
                        "padding": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      }
                    }
                  />
                </noscript>
              </span>
            </div>
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
